fixed spacing issue

--- a/src/Charts.css
+++ b/src/Charts.css
@@ -1,22 +1,29 @@
 .chart-div {
-  position: relative;
-  float: left;
-  margin-left: 10%;
-  margin-top: 3rem;
-  padding-bottom: 2rem;
+display: flex;  
   width: 80%;
-  height: 100%;
+  margin-left: 10%;
+}
+.content-div{
+    justify-content: center;
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-items: center;
 }
 .recharts-wrapper {
-  border-radius: 0.5rem;
 
+  border-radius: 0.5rem;
   margin-bottom: 3rem;
 }
-.spacer {
+/* .spacer {
   height: 65rem;
-}
+} */
 .card-div {
-  padding-bottom: 3rem;
+    /* width: 80%;
+    padding-left: 5%; */
+  padding-bottom: 2rem;
 }
 .opensea-link2 {
   float: left;
